[gd_scene load_steps=3 format=3 uid="uid://ckvmepqhhb0xq"]

[ext_resource type="Theme" uid="uid://br0lkmc6eeu2c" path="res://Themes/MenuButtons.tres" id="1_0i5ir"]
[ext_resource type="Script" path="res://Levels/main_menu.gd" id="1_mow3w"]

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_mow3w")

[node name="MenuOptions" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuOptions"]
layout_mode = 0
offset_left = 482.0
offset_top = 227.0
offset_right = 671.0
offset_bottom = 421.0
theme = ExtResource("1_0i5ir")
theme_override_constants/separation = 16

[node name="Start" type="Button" parent="MenuOptions/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="MenuOptions/VBoxContainer"]
layout_mode = 2
text = "Settings"

[connection signal="pressed" from="MenuOptions/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuOptions/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
